# Kharon-crawler

./: .env.example  .gitignore  Cargo.toml  endpoints.md  responce.json
src/: main.rs
src/crawlers/: demo.rs  mod.rs  starknet_crawler.rs
src/models/: mod.rs  network_model.rs  user_model.rs  wallet_model.rs
src/routes/: admin_routes.rs  mod.rs  user_route.rs
src/services/: db.rs  mailer.rs  mod.rs
src/utils/: api_response.rs  mail_structure.rs  mod.rs
