[package]
name = "CRAWLER"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
uuid = { version = "1.2.3", features = ["serde", "v4"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.93"
env_logger = "0.11.5"
log = "0.4.17"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"]}
aws-config = "1.5.9"
aws-sdk-dynamodb = "1.51.0"
alloy = "0.5.4"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
tokio = "1.41.0"
json = "0.12"
mongodb = "3.1.0"
futures-util = "0.3.31"
